[gd_scene load_steps=9 format=3 uid="uid://bc823tm4n5kib"]

[ext_resource type="Texture2D" uid="uid://dxk1hu0t4u6wx" path="res://assets/ui/main_ui.png" id="1_3458d"]
[ext_resource type="Script" uid="uid://dihb6b40llexs" path="res://scenes/ui/pull_out_drawer.gd" id="2_lgc2k"]
[ext_resource type="Texture2D" uid="uid://rutj4t3ikalg" path="res://assets/ui/panel.png" id="3_3yp7r"]
[ext_resource type="PackedScene" uid="uid://dxhvunlio0i71" path="res://scenes/ui/build_item_icon.tscn" id="4_wfkvc"]
[ext_resource type="PackedScene" uid="uid://b2yhlposmux4c" path="res://scenes/ui/creature_icon.tscn" id="5_32itq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lofw8"]
atlas = ExtResource("1_3458d")
region = Rect2(0, 336, 270, 64)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ww7q"]
bg_color = Color(0.8, 0.8, 0.8, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dluv1"]
bg_color = Color(0.8, 0.8, 0.8, 1)
expand_margin_left = 10.0
expand_margin_right = 10.0

[node name="PullOutDrawer" type="NinePatchRect"]
show_behind_parent = true
texture_filter = 5
custom_minimum_size = Vector2(0, 72)
anchors_preset = -1
anchor_top = 0.865625
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -810.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 0
texture = SubResource("AtlasTexture_lofw8")
region_rect = Rect2(0, 0, 270, 64)
patch_margin_left = 24
patch_margin_top = 18
patch_margin_right = 22
patch_margin_bottom = 1
script = ExtResource("2_lgc2k")
metadata/_edit_use_anchors_ = true

[node name="BuildContainer" type="TabContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 36.0
offset_top = 29.0
offset_right = -33.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_constants/side_margin = 20
theme_override_styles/panel = SubResource("StyleBoxFlat_2ww7q")
theme_override_styles/tab_selected = SubResource("StyleBoxFlat_dluv1")
current_tab = 0

[node name="All" type="NinePatchRect" parent="BuildContainer"]
layout_mode = 2
texture = ExtResource("3_3yp7r")
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="BuildContainer/All"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 43.0
offset_right = -16.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="ItemList" type="HBoxContainer" parent="BuildContainer/All/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 50
alignment = 1

[node name="BuildItemIcon" parent="BuildContainer/All/MarginContainer/ItemList" instance=ExtResource("4_wfkvc")]
layout_mode = 2
mouse_filter = 1

[node name="Beds" type="NinePatchRect" parent="BuildContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_3yp7r")
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="BuildContainer/Beds"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 43.0
offset_right = -16.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="BuildContainer/Beds/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BuildItemIcon" parent="BuildContainer/Beds/MarginContainer/HBoxContainer" instance=ExtResource("4_wfkvc")]
layout_mode = 2

[node name="Food" type="NinePatchRect" parent="BuildContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_3yp7r")
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="BuildContainer/Food"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 43.0
offset_right = -16.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="BuildContainer/Food/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BuildItemIcon" parent="BuildContainer/Food/MarginContainer/HBoxContainer" instance=ExtResource("4_wfkvc")]
layout_mode = 2

[node name="Decoration" type="NinePatchRect" parent="BuildContainer"]
visible = false
layout_mode = 2
texture = ExtResource("3_3yp7r")
metadata/_tab_index = 3

[node name="MarginContainer" type="MarginContainer" parent="BuildContainer/Decoration"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 43.0
offset_right = -16.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="BuildContainer/Decoration/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="BuildItemIcon" parent="BuildContainer/Decoration/MarginContainer/HBoxContainer" instance=ExtResource("4_wfkvc")]
layout_mode = 2

[node name="CreatureContainer" type="ScrollContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -509.0
offset_top = 24.0
offset_right = 507.0
offset_bottom = 232.0
grow_horizontal = 2
mouse_filter = 2
follow_focus = true
vertical_scroll_mode = 0

[node name="CreatureList" type="HBoxContainer" parent="CreatureContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CreatureIcon" parent="CreatureContainer/CreatureList" instance=ExtResource("5_32itq")]
layout_mode = 2
